# mpf

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  configure.sh  install.sh
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/benchmarks/: mpf_timing.c
core/blas/: mpf_blas.h  mpf_blas_mkl_internal.h
core/io/: mpf_buffer_io.c  mpf_mmio.c  mpf_mmio.h  mpf_printout.c
core/numops/: mpf_linalg_op.c  mpf_scalar_op.c
core/probe/: mp_hybrid_blocking  mpf_blocking.c  mpf_blocking_batch.c  mpf_blocking_batch_coarse.c  mpf_blocking_hybrid.c  mpf_color.c  mpf_compact_hierachy.c  mpf_contract_batch_blocking.c  mpf_contract_blocking.c  mpf_contract_row.c  mpf_contract_sample.c  mpf_generate_sampling_endpoints.c  mpf_get_max_blk_fA.c  mpf_hybrid_blocking_init.c  mpf_multisample.c  mpf_multisample_old.c  mpf_pattern_multisample_merge.c  mpf_pattern_sample.c  mpf_probe.c  mpf_probe.h  mpf_sample_contract_dynamic.c  mpf_sample_contract_dynamic_new.c  mpf_sparse_reorder_contract.c
core/run/: CMakeLists.txt  Makefile  cmake_install.cmake  mpf.c  mpf.h  mpf_main.c  mpf_run.c
core/solve/: mpf_solve.c  mpf_solve.h
core/solve/inner/krylov/: mpf_blk_cg.c  mpf_blk_gmres.c  mpf_blk_lanczos.c  mpf_cg.c  mpf_cheb.c  mpf_defl_get_mem_size.c  mpf_defl_lanczos.c  mpf_dsy_sparse_cg  mpf_ev.c  mpf_ev_defl_cg.c  mpf_ev_defl_lanczos.c  mpf_gbl_cg.c  mpf_gbl_gmres.c  mpf_gbl_lanczos.c  mpf_gbl_pcg.c  mpf_gmres.c  mpf_krylov_alloc.c  mpf_lanczos.c  mpf_lanczos_cheb.c  mpf_pcg.c  mpf_seq_solve.c  mpf_spbasis_blk_lanczos.c  mpf_spbasis_defl_cg.c  mpf_spbasis_gbl_lanczos.c  mpf_spbasis_lanczos.c
core/solve/inner/ls/: mpf_ls_d_horner.c  mpf_ls_horner_init.c
core/solve/inner/precond/: mp_precond.c
core/solve/inner/qr/: mpf_qr.c
core/solve/outer/: mp_pthread_batch_solve.c  mp_solve_batch_ls.c  mpf_batch_2pass.c  mpf_batch_cheb.c  mpf_batch_defl_solve.c  mpf_batch_spai.c  mpf_batch_spbasis.c  mpf_rhs.c  mpf_select_op.c  mpf_solve_batch.c  mpf_solve_get_mem.c  mpf_sparse_reconstruct.c  mpf_sparse_solve.c
core/types/: mpf_args.c  mpf_aux.h  mpf_bucket_array.c  mpf_color_to_node_map.c  mpf_context.c  mpf_dense.c  mpf_heap.c  mpf_linked_list.c  mpf_matrix.c  mpf_sparse.c  mpf_types.h
cuda/main/: Makefile  mp_cuda.h  mp_cuda_aux.c  mp_cuda_aux.h
cuda/probe/: Makefile  mp_cuda_probe.cu  mp_cuda_probe.h
cuda/solve/: Makefile  mp_cuda_solve.h  mp_cuda_solve_memory_get.c
cuda/solve/inner/: mp_cuda_solve_cg.c  mp_cuda_solve_gmres.c  mp_cuda_solve_lanczos.c
cuda/solve/outer/: mpf_cuda_rhs.cu
examples/: CMakeLists.txt  Makefile
examples/index_by_application/: mpf_application_00_uncov.c  mpf_application_00_uncov.sh  mpf_application_01_uncov.c  mpf_application_01_uncov.sh  mpf_application_02_uncov.sh  mpf_application_03_uncov.sh  mpf_application_04_uncov.sh  mpf_application_05_uncov.sh  mpf_application_06_uncov.c  mpf_application_06_uncov.sh  mpf_application_07_uncov.sh  mpf_application_08_uncov.sh  mpf_application_09_uncov.c  mpf_application_09_uncov.sh  mpf_application_10_uncov.sh  mpf_application_11_uncov.sh  mpf_application_12_uncov.sh  mpf_application_13_uncov.c  mpf_application_13_uncov.sh  mpf_application_14_uncov.sh  mpf_application_17_uncov.c  mpf_application_18_uncov.c  readme.md
examples/index_by_method/: mpf_test0_blk_probing_cg.c  mpf_test0_blk_probing_cg_run.sh  mpf_test1_blk_probing_blk_cg.c  mpf_test1_blk_probing_blk_cg_run.sh  mpf_test2_blk_probing_gbl_cg.c  mpf_test2_blk_probing_gbl_cg_run.sh  mpf_test3_blk_probing_gmres.c  mpf_test3_blk_probing_gmres_run.sh  mpf_test4_blk_probing_blk_gmres.c  mpf_test4_blk_probing_blk_gmres_run.sh  mpf_test5_blk_probing_gbl_gmres.c  mpf_test5_blk_probing_gbl_gmres_run.sh  mpf_test6_blk_probing_cg_spai.c  mpf_test6_blk_probing_cg_spai_run.sh  mpf_test7_blk_probing_cg.c  mpf_test7_blk_probing_cg_run.sh  mpf_test8_blk_probing_cg_run.sh  mpf_test9_blk_probing_cg_run.sh
matlab/analysis/: startup.m
matlab/analysis/compute/: mpf_eval_error.m  mpf_eval_error_by_range.m  mpf_get_speedup.m  mpf_get_stride_speedup.m  mpf_get_thread_speedup.m  mpf_get_total_probe_runtime.m  mpf_get_total_solver_runtime.m
matlab/analysis/examples/index_by_application/: mpf_application_00_uncov.m  mpf_application_02_uncov.m  mpf_application_03_uncov.m  mpf_application_04_uncov.m  mpf_application_0_uncov.m  mpf_lapl_1_blk_probing_cg.m
matlab/analysis/examples/index_by_method/: mpf_test6_blk_probing_cg_spai.m  mpf_test7_blk_probing_cg.m  mpf_test8_blk_probing_cg.m
matlab/analysis/io/: mmread.m  mmwrite.m  mpf_read_accuracy_meta.m  mpf_read_attribute.m  mpf_read_blk_fA.m  mpf_read_error_by_id.m  mpf_read_log_by_id.m  mpf_read_log_by_range.m  mpf_read_meta.m  mpf_save_bar.m  mpf_save_entrywise_error.m  mpf_save_error.m  mpf_save_nrhs.m  mpf_save_perf.m  mpf_save_runtimes.m  mpf_save_speedup.m
matlab/analysis/plots/: mpf_bar_plot.m  mpf_error_plot.m  mpf_perf_plot.m  mpf_plot.m  mpf_plot_nrhs.m  mpf_runtimes_plot.m  mpf_speedup_plot.m  mpf_thread_speedup_plot.m
matlab/analysis/structs/: MPF_Data.m  MPF_Error.m  MPF_Fig.m  MPF_Filename.m  MPF_Log.m  MPF_LogIds.m  MPF_Probe.m  MPF_Query.m  MPF_RangeQuery.m  MPF_Runtime.m  MPF_Solver.m  MPF_Speedup.m
matlab/analysis/tests/: mpf_paper_test_script.m  mpf_paper_test_script5_uncov_128_3_5.m  mpf_paper_test_stride_script.m  mpf_paper_test_stride_script2.m  mpf_paper_test_stride_script3.m  mpf_paper_test_stride_script4.m  mpf_test_script.m
matlab/matrix_generators/: cov_0.m  test1D.m  test2D.m  test3D.m  uncov.m  uncov2.m
